# RunaLang

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE.md  MISSION_STATEMENT_V2.md  MONOREPO_SETUP.md  Makefile  PHASE_ROADMAP.md  README.md  RUNA_STDLIB_AUDIT_AND_ACTION_PLAN.md  SUPPORTERS.MD  TIER1_ROUNDTRIP_TESTING.md  bootstrap_results.json  brand-guidelines.md  callgrind.out.131243  docker-compose.yml  fix_indentation.py  fix_indentation_v2.py  how  how accca1d3f5440b4053ec7cbb109bdb16e6cb04a7  package.json  push_runa_to_github.ps1  requirements-dev.txt  requirements.txt  runa-dev.bat  setup.py  simple_loops.runa  tatus  test_advanced_types.py  test_advanced_types.runa  test_async.py  test_async.runa  test_dowhile.runa  test_error_handling.py  test_error_handling.runa  test_lexer_debug.py  test_loops.py  (+20 more)
_legacy/src/bootstrap/: Cargo.toml  comprehensive_test.runa  foreach_test.runa
bootstrap/v0.1_runa-bootstrap/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  SELF_HOSTING_ACHIEVEMENT.md  build.rs  compile_output.txt  comprehensive_self_host_test.runa  control_flow_test  control_flow_test.runa  control_flow_test_exe  debug_self_host_test.runa  debug_tokens.runa  function_param_test  function_param_test.runa  function_param_test_exe  input.txt  minimal_elseif_noreturn.runa  minimal_main_v02  minimal_test.runa  no_param_test  no_param_test.runa  no_param_test_exe  output.txt  self_host_test  self_host_test.runa  self_host_test_exe  simple_otherwise_if.runa  simple_param_test.runa  simple_test_exe  string_char_at_final  string_char_at_test  string_compare_test  string_compare_test_exe  string_concat_final  string_concat_test  string_length_final  string_length_test  string_substring_fence_final  string_substring_fence_test  (+51 more)
bootstrap/v0.1_runa-bootstrap/examples/: basic_arithmetic.runa  hello_world.runa
bootstrap/v0.1_runa-bootstrap/src/: codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  types.rs
bootstrap/v0.1_runa-bootstrap/tests/: arithmetic_test.runa  asm_test_100.runa  bitwise_proof.runa  bitwise_vs_logical_complete.runa  boolean_comprehensive.runa  boolean_debug.runa  boolean_in_let.runa  boolean_or_debug.runa  boolean_test.runa  boolean_test2.runa  boolean_test3.runa  check_test1.runa  clean_verification.runa  comment_test.runa  commented_test.runa  comparison_test.runa  comprehensive_verification.runa  debug_bitwise.runa  debug_test.rs  empty_asm_test.runa  final_verification.runa  fixed_asm_test.runa  function_call_test.runa  individual_bool_test.runa  inline_asm_simple.runa  inline_assembly_test.runa  main_test.runa  main_test_99.runa  minimal_string_test.runa  nop_asm_test.runa  proper_asm_test.runa  real_test.runa  simple_and_test.runa  simple_asm_test.runa  simple_boolean_test.runa  simple_string_test.runa  string_char_at_test.runa  string_compare_test.runa  string_concat_test.runa  string_length_test.runa  (+24 more)
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
runa/: .gitignore  CONTRIBUTING.md  DATABASE_AUDIT_REPORT.md  Dockerfile  GRAPHICS_COMPETITIVE_ANALYSIS.md  HTTP_COMPETITIVE_ANALYSIS.md  IMAGE_PROCESSING_COMPETITIVE_ANALYSIS.md  INSPECT_LIBRARY_COMPETITIVE_ANALYSIS.md  LICENSE.md  MISSION_STATEMENT_V2.md  Makefile  PROJECT_STATUS.md  PUBLIC_REPO_SETUP.md  README.md  WEEK1_STATUS.md  WEEK2_PLAN.md  __init__.py  __main__.py  build-lsp.sh  build_self_hosting.py  build_system.runa  cli.py  comprehensive_syntax_test.runa  debug_control_flow.py  debug_lexer.py  demo_week1.py  diagnose_lsp.sh  docker-compose.yml  fix_all_dataclass.py  fix_all_sql_dataclass.py  fix_dataclass_fields.py  fix_placeholders.py  fix_sql_dataclass.py  fix_stdlib_syntax.py  pyproject.toml  runa.toml  runa_bootstrap.py  runa_cli.py  setup.py  test_ai_parsing_debug.py  (+30 more)
runa/.github/workflows/: cd.yml  ci-cd.yml  ci.yml
runa/00-START-HERE/Project Checklists/: Runa Week 1 Checklist.md
runa/_legacy/: README.md
runa/bootstrap/v0.0_rust-bootstrap/: Cargo.toml  README.md
runa/bootstrap/v0.0_rust-seed/: -o  check  check.s  comprehensive_test.o.s  debug_detailed.o.s  debug_detailed_v2.o.s  debug_null.o.s  debug_null_v2.o.s  debug_simple.runa  runa_v01  test_arithmetic  test_arithmetic.s  test_basic.o.s  test_bounds.o.s  test_builtin_only.o.s  test_char_at.s  test_char_at.s.s  test_char_at_exe  test_comparison_exe.s  test_concat.o.s  test_concat_in_function.runa  test_concat_only  test_concat_only.runa  test_concat_only.s  test_concat_systematic.o.s  test_concat_v2.o.s  test_context_fix.o.s  test_context_only  test_context_only.s  test_debug_memory.o.s  test_debug_substring.o.s  test_debug_tokens_output  test_debug_tokens_output.s  test_direct.o.s  test_function_calls  test_function_calls.s  test_function_no_params  test_function_no_params.runa  test_function_no_params.s.s  test_function_no_params_fixed  (+110 more)
runa/bootstrap/v0.1_microruna/: README.md
runa/bootstrap/v0.1_microruna-compiler/: -o  gdb.cmd  runa_v01  runa_v01_new  sample.runa
runa/compiler/: __init__.py  ast_nodes.py  ast_to_ir.py  ir.py  lexer.py  parser.py  semantic.py  tokens.py
runa/cpp/: CMakeLists.txt  README.md  test_vm.cpp  vm.cpp  vm.h
runa/docker/: deployment.yml  init-db.sql  nginx.conf  registry.Dockerfile
runa/docs/: conf.py
runa/examples/: README.md  factorial.runa  hello_world.runa  math_symbol_enforcement_demo.runa  parser_demo.runa
runa/ide-plugins/: INSTALLATION.md  README.md  STATUS.md  build-plugins.ps1
runa/runa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runa/rust/: Cargo.toml  test_error_handling.rs
runa/scripts/: validate_self_hosting.py
runa/src/: compiler.py
runa/test_training_data/: test_dataset.json
runa/tests/: __init__.py  conftest.py  test_ast_visualizer.py  test_compiler.py  test_control_flow.py  test_hybrid_compiler.py  test_lexer.py  test_module_system.py  test_parser.py  test_parser_loops.py  test_semantic.py  test_semantic_analyzer.py  test_symbol_table.py  test_type_system.py  test_types.py  test_vm.py  test_week2_features.py
runa/tools/: generate_grammar.py
runa/week progress/: WEEK_PROGRESS_SUMMARY.md
(+11706 files in other folders)
