[package]
name = "runa-lsp"
version = "0.1.0"
edition = "2021"
description = "Runa Language Server Protocol implementation"
authors = ["Sybertnetics AI Solutions"]
license = "MIT"

[[bin]]
name = "runa-lsp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"