[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runa-lang"
version = "0.3.0"
description = "Runa: Natural Language Programming Language with Multi-Language Translation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sybertnetics", email = "info@sybertnetics.com"}
]
maintainers = [
    {name = "Sybertnetics", email = "info@sybertnetics.com"}
]
keywords = [
    "programming-language", 
    "natural-language", 
    "compiler", 
    "transpiler", 
    "ast", 
    "code-generation",
    "multi-language"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.4",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "asyncio-mqtt>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
all = ["runa-lang[dev,docs]"]

[project.urls]
"Homepage" = "https://github.com/sybertnetics/runa"
"Documentation" = "https://runa-lang.readthedocs.io"
"Repository" = "https://github.com/sybertnetics/runa"
"Bug Tracker" = "https://github.com/sybertnetics/runa/issues"

[project.scripts]
runa = "runa.tools.cli:main"
runa-lsp = "runa.tools.lsp.lsp_server:main"
runa-package = "runa.tools.package.manager:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"runa" = ["**/*.yaml", "**/*.json", "**/*.toml", "**/*.md"]

# Black formatting configuration
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude generated files
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "verification: marks tests as verification tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/runa"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]