[package]
name = "runa-bootstrap"
version = "0.1.0"
edition = "2021"
authors = ["Runa Language Team"]
description = "Bootstrap compiler for the Runa programming language"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
]

[dependencies]
# LLVM bindings for code generation
llvm-sys = { version = "170", features = ["prefer-static"] }

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# String interning for performance
string-cache = "0.8"

# Ordered maps for symbol tables
indexmap = "2.0"

# Parallel processing for compilation units
rayon = "1.7"

# File system operations
walkdir = "2.4"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "runac"
path = "src/main.rs"

[profile.release]
# Optimize for performance in release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true