[package]
name = "runa-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-sys = { version = "170", features = ["prefer-static"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[lib]
name = "runa_bootstrap"
path = "src/lib.rs"

[[bin]]
name = "runac"
path = "src/main.rs"