[package]
name = "runa-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
runa-common = { path = "../runtime/runa-common" }
# runa-rt = { path = "../runtime" }  # Temporarily disabled for testing
serde_json = "1.0"

[[bin]]
name = "runac"
path = "src/main.rs" 