[package]
name = "runa-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
runa-common = { path = "runa-common" }
atty = "0.2"
term_size = "0.3"
chrono = "0.4"
# Runtime Interface Dependencies
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
backtrace = "0.3"

[dev-dependencies]
tempfile = "3.2"

[workspace]
members = ["runa-common", "bootstrap/runac"]
