[package]
name = "runa-runtime"
version = "0.1.0"
edition = "2021"
description = "Runa language runtime with integrated LSP server"
authors = ["Sybertnetics AI Solutions"]
license = "MIT"

[[bin]]
name = "runa-lsp"
path = "src/bin/runa-lsp-simple.rs"

[dependencies]
runa-common = { path = "runa-common" }
atty = "0.2"
term_size = "0.3"
chrono = "0.4"
libc = "0.2"
# Runtime Interface Dependencies
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.8"
# Performance Enhancement Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async Runtime Dependencies
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"], optional = true }
num_cpus = "1.0"
flate2 = "1.0"
base64 = "0.21"
# LSP Server Dependencies
log = "0.4"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }

[dev-dependencies]
tempfile = "3.2"

[workspace]
members = ["runa-common"]
